--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,9 @@
     "license": "proprietary",
     "version": "1.0.0",
     "require": {
-        "php": "^7.4|^8.0|^8.1",
+        "php": "^7.4|^8.0|^8.1|^8.2|^8.3|^8.4",
         "yourvendor/module-one": "^1.0",
-        "yourvendor/module-two": "^1.0",
-        "yourvendor/module-three": "^1.0",
-        "yourvendor/module-four": "^1.0"
+        "yourvendor/module-two": "^1.0"
     },
     "repositories": [
         {
@@ -27,4 +25,5 @@
             }
         }
     ]
+
 }
