--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,29 @@
     "description": "Bundle of all custom Magento 2 extensions",
     "type": "metapackage",
     "license": "proprietary",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "require": {
-        "php": "^7.4|^8.4|^8.3",
-        "yourvendor/module-one": "1.0.0",
-        "yourvendor/module-two": "1.0.0",
-        "yourvendor/module-three": "1.0.0",
-        "yourvendor/module-four": "1.0.0"
-    }
+        "php": "^8.4|^8.0|^8.1",
+        "miniorange_inc/miniorange-social-login": "*"
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./src/ModuleOne",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/ankushx/social-login"
+        },
+        {
+            "type": "path",
+            "url": "./src/ModuleTwo",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
